Fixed Generic Button

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -16,12 +16,12 @@ Footer {
   color: white;
 }
 
-.navbar {
+/*.navbar {
   position: fixed;
   z-index: 999;
   width: 100%;
-}
+}*/
 
-.container { 
+/*.container { 
   margin-top: 25px;
-}
+}*/
