--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -32,10 +32,6 @@ footer {
   opacity: 1;
 }
 
-/*.container { 
-  margin-top: 25px;
-}*/
-
 body {
   background-color: #f1f1f1;
   padding-top: 30px;
@@ -52,4 +48,59 @@ nav {
 
 nav button {
   margin-right: 21px;
+}
+
+.embed-responsive, button {
+  border: 2px solid #bdc3c7 !important;
+  border-radius: 6px !important;
+}
+
+
+
+
+
+
+/****************************************/
+.switch input { 
+  display:none;
+}
+.switch {
+  display:inline-block;
+  width:60px;
+  height:30px;
+  margin:8px;
+  transform:translateY(50%);
+  position:relative;
+}
+
+.slider {
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  border-radius:30px;
+  box-shadow:0 0 0 2px #bdc3c7, 0 0 4px #bdc3c7;
+  cursor:pointer;
+  border:4px solid transparent;
+  overflow:hidden;
+   transition:.4s;
+}
+.slider:before {
+  position:absolute;
+  content:"";
+  width:41%;
+  right: 0;
+  height:100%;
+  background:#777;
+  border-radius:30px;
+  transform:translateX(-30px);
+  transition:.4s;
+}
+
+input:checked + .slider:before {
+  transform:translateX(0px);
+}
+input:checked + .slider {
+  box-shadow:0 0 0 2px #bdc3c7,0 0 2px #bdc3c7;
 }
