--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,6 +10,15 @@ footer {
   background-color: #f1f1f1;
 }
 
+.top-2rem{
+  margin-top: 2rem;
+}
+
+.col-sm-6{
+  display: inline-block;
+}
+
+
 .badge {
   background: grey;
   position: relative;
@@ -56,7 +65,7 @@ nav button {
   border-radius: 6px !important;
 }
 
-.switch input { 
+.switch input {
   display:none;
 }
 .switch {
