--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -136,22 +136,9 @@ input:checked + .slider {
   transform: translate(-50%, -50%);
 }
 
-@-webkit-keyframes slide {
-  0%{
-      top: 2px;
-  }
-  50%{
-     top: 15px;
-  }
-  100%{
-    top: 2px;
-}
-}
-
-#arrow{
-  position: absolute;
-  right: 40px;
-  -webkit-animation: slide 2s linear infinite;
+.loading-small {
+  top: 55% !important;
+  font-size: 25px !important;
 }
 
 #logo {
@@ -161,4 +148,17 @@ input:checked + .slider {
 
 .navbar-items {
   margin: 0 auto;
+}
+
+#imageUploader {
+  display: none;
+}
+
+#spanUploader {
+  cursor: pointer;
+}
+
+#uploadedImage, #spanUploader {
+  border: 2px solid #bdc3c7 !important;
+  border-radius: 6px !important;
 }
