--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -165,6 +165,12 @@ input:checked + .slider {
 
 .card {
   height: 605px !important;
+  transition: transform .2s;
+  box-shadow: 0 0px 15px 0px rgba(0, 0, 0, 0.25);
+}
+
+.card:hover {
+  transform: scale(1.03);
 }
 
 .card-text {
@@ -211,4 +217,13 @@ input:checked + .slider {
   max-height: 120px;
   overflow-y: auto;
   height: 120px !important;
+}
+
+.decrease {
+  cursor: pointer;
+  margin-right: 25px; 
+}
+.increase {
+  cursor: pointer;
+  margin-left: 25px; 
 }
