Input controls + loading

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -236,3 +236,7 @@ input:checked + .slider {
 .card-cart .card-title {
   height: 60px !important;
 }
+
+.cardHeaderWrapper .card-title {
+  height: 60px !important;
+}
