Fixed instant payment (to be tested) and fixed quarters

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -350,3 +350,11 @@ opacity: 1;
   max-height: 85px;
   overflow-y: scroll;
 }
+
+.redInvoice {
+  background-color: #ff000016;
+}
+
+.greenInvoice {
+  background-color: #1abc3b12;
+}
