--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -218,7 +218,7 @@ input:checked + .slider {
   height: auto !important;
 }
 
-.card-manager .card-description {
+.card-manager .card-description, .card-title {
   max-height: 90px;
   overflow-y: auto;
   height: 90px !important;
